Update Day 3 - Elasticsearch Setup.md